Fix opensource build of testapi https://bugs.webkit.org/show_bug.cgi?id=198256

Reviewed by Alexey Proskuryakov.

In r245564, we added custom entitlements to testapi to allow caching
bytecode in data vaults, but we should only use the entitlements for
internal builds. Otherwises, testapi gets killed on launch. Also fix the
formatting for the errors added in the same patch, according to comments
in the bug after the patch had already landed.

* API/JSScript.mm:
(validateBytecodeCachePath):
* Configurations/ToolExecutable.xcconfig:


Canonical link: https://commits.webkit.org/212317@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@245800 268f45cc-cd09-0410-ab3c-d52691b4dbfc